# descomposicion-salario-real-es

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  README.md  SOURCES.md  Seguimiento.md  pyproject.toml
data/: build_deflactores.py  download_data.py
data/deflactores/: cne_p31.csv  ipc_enlazado.csv
src/: data_loading.py  decomposition.py  reallocation.py  run.py
tests/: conftest.py  golden_es.csv  test_golden.py  test_invariants.py
writeup/: resultados_espana.md
